--- a/src/XFood.MVC/Views/Home/Index.cshtml
+++ b/src/XFood.MVC/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <script>
         $('#test').on('click', () => {
             console.log('clicked');
-           $.get('https://localhost:44318/api/test/list',
+            $.get('https://localhost:7051/api/employee/list',
            function (response){
                console.log(response);
                })
