--- a/src/XFood.Web/_Imports.razor
+++ b/src/XFood.Web/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using XFoodBlazor.Web.Client
 @using XFoodBlazor.Web.Client.Shared
+@using Microsoft.AspNetCore.Components.Authorization
