configure client requests

--- a/src/XFood.Web/_Imports.razor
+++ b/src/XFood.Web/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using XFoodBlazor.Web.Client
-@using XFoodBlazor.Web.Client.Shared
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+@using Blazored.LocalStorage
