--- a/src/XFood.Web/App.razor
+++ b/src/XFood.Web/App.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly">
+﻿@using XFoodBlazor.Web.Client.Shared
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
@@ -10,7 +11,6 @@
         </CascadingAuthenticationState>
     </NotFound>
 </Router>
-
 @code {
     [CascadingParameter] private Task<AuthenticationState> authenticationStateTask { get; set; }
 
