--- a/src/XFood.Web/Shared/MainLayout.razor
+++ b/src/XFood.Web/Shared/MainLayout.razor
@@ -1,13 +1,16 @@
-﻿@inherits LayoutComponentBase
-
+﻿@using XFoodBlazor.Web.Client.Services.Authorization
+@inherits LayoutComponentBase
+@inject IAuthService AuthService
+@inject NavigationManager NavigationManager
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <NavMenu/>
     </div>
 
     <main>
         <div class="top-row px-4">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <button type="submit" class="btn btn-primary" @onclick="Logout">Submit</button>
         </div>
 
         <article class="content px-4">
@@ -15,3 +18,11 @@
         </article>
     </main>
 </div>
+
+@code
+{
+    private async Task Logout()
+    {
+        await AuthService.Logout();
+    }
+}
