--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -24,6 +24,14 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <CascadingAuthenticationState>
+                <NavLink class="nav-link" href="fetchdata">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Check authriaztion
+                </NavLink>
+            </CascadingAuthenticationState>
+
+        </div>
     </nav>
 </div>
 
@@ -36,4 +44,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
