--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -20,17 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <CascadingAuthenticationState>
+            <AuthorizeView>
                 <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Check authriaztion
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                 </NavLink>
-            </CascadingAuthenticationState>
-
+            </AuthorizeView>
         </div>
     </nav>
 </div>
