--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -24,6 +24,9 @@
                 <NavLink class="nav-link" href="fetchdata">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                 </NavLink>
+                <NavLink class="nav-link" href="pizzerias">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Пиццерии
+                </NavLink>
             </AuthorizeView>
         </div>
     </nav>
