--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -27,6 +27,9 @@
                 <NavLink class="nav-link" href="pizzerias">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Пиццерии
                 </NavLink>
+                <NavLink class="nav-link" href="stats">
+                    <span class="oi oi-bar-chart" aria-hidden="true"></span> Общая статистика
+                </NavLink>
             </AuthorizeView>
         </div>
     </nav>
