--- a/src/XFood.Web/Pages/Pizzeria/Criteria.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Criteria.razor
@@ -1,15 +1,19 @@
 ﻿@page "/pizzeria/criteria/{PizzeriaId:int}"
 @using XFoodBlazor.Web.Client.Services.Criterion;
+@using XFoodBlazor.Web.Client.Services.Criterion.Create;
+@using XFoodBlazor.Web.Client.Services.Criterion.Delete;
+@using XFoodBlazor.Web.Client.Services.Criterion.Update;
 @using XFoodBlazor.Web.Client.Services.Pizzeria
 @using XFoodBlazor.Web.Client.Services.Pizzeria.GetPizzeria
 @inject IPizzeriaService PizzeriaService
+@inject ICriterionService CriterionService
 
 @if (response != null)
 {
     <div class="d-flex justify-content-between align-items-center mb-3">
         <p><span class="oi oi-list-rich" aria-hidden="true"></span> Пиццерия: @response.Pizzeria?.Name</p>
         <button class="btn btn-sm btn-success" @onclick="AddCriterion">
-            <span class="oi oi-plus" aria-hidden="true"></span> Добавить новый критерий
+            <span class="oi oi-plus" aria-hidden="true"></span>   Добавить новый критерий
         </button>
     </div>
 
@@ -28,12 +32,39 @@
                 var firstCriterion = group.First();
                 <tr>
                     <td rowspan="@group.Count()">@firstCriterion.Section</td>
-                    <td>@firstCriterion.Name</td>
-                    <td>@firstCriterion.MaxPoints</td>
                     <td>
-                        <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(firstCriterion))">
-                            <span class="oi oi-pencil" aria-hidden="true"></span>
-                        </button>
+                        @if (firstCriterion != editedCriterion)
+                        {
+                            @firstCriterion.Name
+                        }
+                        else
+                        {
+                            <textarea @bind="editedCriterion.Name" class="form-control" rows="2"></textarea>
+                        }
+                    </td>
+                    <td>
+                        @if (firstCriterion != editedCriterion)
+                        {
+                            @firstCriterion.MaxPoints
+                        }
+                        else
+                        {
+                            <input @bind="editedCriterion.MaxPoints" class="form-control" />
+                        }
+                    </td>
+                    <td>
+                        @if (firstCriterion != editedCriterion)
+                        {
+                            <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(firstCriterion))">
+                                <span class="oi oi-pencil" aria-hidden="true"></span>
+                            </button>
+                        }
+                        else
+                        {
+                            <button class="btn btn-sm btn-success" @onclick="@(async () => await SaveEditedCriterion(firstCriterion))">
+                                <span class="oi oi-check" aria-hidden="true"></span>
+                            </button>
+                        }
                         <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriterion(firstCriterion))">
                             <span class="oi oi-trash" aria-hidden="true"></span>
                         </button>
@@ -42,12 +73,30 @@
                 @foreach (var criterion in group.Skip(1))
                 {
                     <tr>
-                        <td>@criterion.Name</td>
+                        <td>
+                            @if (criterion != editedCriterion)
+                            {
+                                @criterion.Name
+                            }
+                            else
+                            {
+                                <textarea @bind="editedCriterion.Name" class="form-control" rows="2"></textarea>
+                            }
+                        </td>
                         <td>@criterion.MaxPoints</td>
                         <td>
-                            <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(criterion))">
-                                <span class="oi oi-pencil" aria-hidden="true"></span>
-                            </button>
+                            @if (criterion != editedCriterion)
+                            {
+                                <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(criterion))">
+                                    <span class="oi oi-pencil" aria-hidden="true"></span>
+                                </button>
+                            }
+                            else
+                            {
+                                <button class="btn btn-sm btn-success" @onclick="@(async () => await SaveEditedCriterion(criterion))">
+                                    <span class="oi oi-check" aria-hidden="true"></span>
+                                </button>
+                            }
                             <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriterion(criterion))">
                                 <span class="oi oi-trash" aria-hidden="true"></span>
                             </button>
@@ -55,6 +104,7 @@
                     </tr>
                 }
             }
+
         </tbody>
     </table>
 
@@ -71,15 +121,23 @@ else
     double MaxPoints;
     GetPizzeriaRequest request = new GetPizzeriaRequest();
     GetPizzeriaResponse response;
+    CreateCriterionRequest createRequest = new CreateCriterionRequest();
+    CreateCriterionResponse createResponse;
+    DeleteCriterionRequest deleteRequest = new DeleteCriterionRequest();
+    DeleteCriterionResponse deleteResponse;
+    UpdateCriterionRequest updateRequest = new UpdateCriterionRequest();
+    UpdateCriterionResponse updateResponse;
+
+    private CriterionView editedCriterion;
 
     protected override async Task OnInitializedAsync()
     {
         request.Id = PizzeriaId;
         response = await PizzeriaService.GetPizzeria(request);
-        UpdatePoints();
+        UpdateTotalPoints();
     }
 
-    private async void UpdatePoints()
+    private async void UpdateTotalPoints()
     {
         MaxPoints = response.Pizzeria.Criteria
             .Where(c => c.Section != "Критический фактор" && c.Section != "Wow Фактор")
@@ -88,12 +146,25 @@ else
 
     private async Task EditCriterion(CriterionView criterion)
     {
-        // Логика обновления критерия
+        editedCriterion = criterion;
+    }
+
+    private async Task SaveEditedCriterion(CriterionView criterion)
+    {
+        updateRequest.Id = criterion.Id;
+        updateRequest.Name = criterion.Name;
+        updateRequest.MaxPoints = criterion.MaxPoints;
+        updateRequest.Section = criterion.Section;
+        updateResponse = await CriterionService.Update(updateRequest);
+        editedCriterion = null;
+        OnInitializedAsync();
     }
 
     private async Task DeleteCriterion(CriterionView criterion)
     {
-        // Логика удаления критерия
+        deleteRequest.Id = criterion.Id;
+        deleteResponse = await CriterionService.Delete(deleteRequest);
+        OnInitializedAsync();
     }
 
     private void AddCriterion()
